--- a/XY_Plotter/platformio.ini
+++ b/XY_Plotter/platformio.ini
@@ -12,4 +12,15 @@
 platform = atmelsam
 board = due
 framework = arduino
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps = 
+	arduino-libraries/Servo @ ^1.1.8
+
+[env:debug_due]
+platform = atmelsam
+board = due
+framework = arduino
+monitor_port = COM9
+monitor_speed = 74880
+lib_deps = 
+	arduino-libraries/Servo @ ^1.1.8
+
