Added ddl files to run on clion

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ VirtualPlotter/x64/Release/*.txt
 VirtualPlotter/x64/Release/VirtualPlotter.tlog/*
 VirtualPlotter/.vs/*
 VirtualPlotter/image.bmp
+VirtualPlotter/.idea/*
+VirtualPlotter/cmake-build-debug/*
