--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Infrastructuur-feature-working-nodes/build
 Infrastructuur-feature-working-nodes/log
 Infrastructuur-feature-working-nodes/src/Beeldverwerking
 Infrastructuur-feature-working-nodes/src/Speech
+cmake-build-debug/*
