Pushed for debug non-production

--- a/XY_Plotter/platformio.ini
+++ b/XY_Plotter/platformio.ini
@@ -24,3 +24,19 @@ monitor_speed = 74880
 lib_deps = 
 	arduino-libraries/Servo @ ^1.1.8
 
+[env:dueUSB]
+platform = atmelsam
+board = dueUSB
+framework = arduino
+upload_port = COM?
+lib_deps = 
+	arduino-libraries/Servo @ ^1.1.8
+
+[env:debug_dueUSB]
+platform = atmelsam
+board = dueUSB
+framework = arduino
+monitor_port = COM9
+monitor_speed = 74880
+lib_deps = 
+	arduino-libraries/Servo @ ^1.1.8
